--- a/ros_qt_ws/src/qt_demo/CMakeLists.txt
+++ b/ros_qt_ws/src/qt_demo/CMakeLists.txt
@@ -2,64 +2,86 @@ cmake_minimum_required(VERSION 3.5)
 
 project(qt_demo VERSION 0.1 LANGUAGES CXX)
 
+# >> ROS2
 if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
     add_compile_options(-Wall -Wextra -Wpedantic)
 endif()
+# << ROS2
 
 set(CMAKE_AUTOUIC ON)
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
 
+# >> ROS2
 if(NOT CMAKE_C_STANDARD)
     set(CMAKE_C_STANDARD 99)
 endif()
+# << ROS2
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-# ROS2
+# >> ROS2
 # find dependencies
+find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
 # uncomment the following section in order to fill in
 # further dependencies manually.
 # find_package(<dependency> REQUIRED)
+# << ROS2
 
 # Qt
 find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets)
 find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets)
 
-set(PROJECT_SOURCES
-        main.cpp
-        mainwindow.cpp
-        mainwindow.h
-        mainwindow.ui
+# ROS2 package: change path to src/... or inclue/...
+file(GLOB_RECURSE PROJECT_SOURCES 
+    ${CMAKE_SOURCE_DIR}/src/*.cpp
+    ${CMAKE_SOURCE_DIR}/include/${CMAKE_PROJECT_NAME}/*.h
+    ${CMAKE_SOURCE_DIR}/src/*.ui
 )
 
 if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
-    qt_add_executable(qt_demo
+    qt_add_executable(${CMAKE_PROJECT_NAME}
         MANUAL_FINALIZATION
         ${PROJECT_SOURCES}
     )
 # Define target properties for Android with Qt 6 as:
-#    set_property(TARGET qt_demo APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
+#    set_property(TARGET ${CMAKE_PROJECT_NAME} APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
 #                 ${CMAKE_CURRENT_SOURCE_DIR}/android)
 # For more information, see https://doc.qt.io/qt-6/qt-add-executable.html#target-creation
 else()
     if(ANDROID)
-        add_library(qt_demo SHARED
+        add_library(${CMAKE_PROJECT_NAME} SHARED
             ${PROJECT_SOURCES}
         )
 # Define properties for Android with Qt 5 after find_package() calls as:
 #    set(ANDROID_PACKAGE_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/android")
     else()
-        add_executable(qt_demo
+        add_executable(${CMAKE_PROJECT_NAME}
             ${PROJECT_SOURCES}
         )
     endif()
 endif()
 
-target_link_libraries(qt_demo PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
+# >> ROS2
+# NOTE: a project name after include directory can be added to minimize the changes in the source files
+#       as in otherwise project name should have been added to any already included header file
+target_include_directories(${CMAKE_PROJECT_NAME} PUBLIC
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/${CMAKE_PROJECT_NAME}>
+  $<INSTALL_INTERFACE:include/${CMAKE_PROJECT_NAME}>)
+target_compile_features(${CMAKE_PROJECT_NAME} PUBLIC c_std_99 cxx_std_17)  # Require C99 and C++17
+# << ROS2
 
-set_target_properties(qt_demo PROPERTIES
+# alternative to ROS2 preffered ament_target_dependencies()
+target_link_libraries(${CMAKE_PROJECT_NAME} 
+  PRIVATE Qt${QT_VERSION_MAJOR}::Widgets
+  # << ROS2
+  ${rclcpp_LIBRARIES}
+  # [dependencies...]
+  # >> ROS2
+)
+
+set_target_properties(${CMAKE_PROJECT_NAME} PROPERTIES
     MACOSX_BUNDLE_GUI_IDENTIFIER my.example.com
     MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
     MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
@@ -67,16 +89,24 @@ set_target_properties(qt_demo PROPERTIES
     WIN32_EXECUTABLE TRUE
 )
 
-install(TARGETS qt_demo
-    BUNDLE DESTINATION .
-    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
-    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
-)
+# >> Qt
+# install(TARGETS ${CMAKE_PROJECT_NAME}
+#     BUNDLE DESTINATION .
+#     LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
+#     RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
+# )
+# << Qt
+
+# >> ROS2
+install(TARGETS ${CMAKE_PROJECT_NAME}
+  DESTINATION lib/${PROJECT_NAME})
+# << ROS2
 
 if(QT_VERSION_MAJOR EQUAL 6)
-    qt_finalize_executable(qt_demo)
+    qt_finalize_executable(${CMAKE_PROJECT_NAME})
 endif()
 
+# >> ROS2
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
   # the following line skips the linter which checks for copyrights
@@ -89,4 +119,11 @@ if(BUILD_TESTING)
   ament_lint_auto_find_test_dependencies()
 endif()
 
+# OPTIONAL: Install launch files.
+# install(DIRECTORY
+#   launch
+#   DESTINATION share/${PROJECT_NAME}/
+# )
+
 ament_package()
+# << ROS2
